--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 												Emergency features include remote pinging, and an emergency letter.</p>
 										</div>
 									</a>
+									<button style="background-color: blue; border-radius: 50%; color: white; padding: 10px 20px; font-size: 16px;">Join Pelorus Health</button>
+
 								</article>
 								<article class="style2">
 									<span class="image">
