--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 												Emergency features include remote pinging, and an emergency letter.</p>
 										</div>
 									</a>
-									<button style="background-color: blue; border-radius: 50%; color: white; padding: 10px 20px; font-size: 16px;">Join Pelorus Health</button>
+									<button style="background-color: #498bf9; border-radius: 80%; color: white; padding: 10px 20px; font-size: 16px;">Join Pelorus Health</button>
 
 								</article>
 								<article class="style2">
