--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 								<h1>Pelorus Health helps people with T1D and their caregivers transition to independence.</h1>
 								<p>Pelorus is a mobile appication currently in development. Connect with us to learn about our journey as we progress! </p>
 							</header>
+							<button style="background-color: #498bf9; border-radius: 50%; color: white; padding: 10px 20px;">Join Pelorus Health</button>
+
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
@@ -64,7 +66,6 @@
 												Emergency features include remote pinging, and an emergency letter.</p>
 										</div>
 									</a>
-									<button style="background-color: #498bf9; border-radius: 80%; color: white; padding: 10px 20px; font-size: 16px;">Join Pelorus Health</button>
 
 								</article>
 								<article class="style2">
