--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Pelorus Health helps people with T1D and their caregivers transition to independence.</h1>
+								<h1>Let us be your <b> true north.<b/></h1>
 								<p>Pelorus is a mobile appication currently in development. Connect with us to learn about our journey as we progress! </p>
 							</header>
 							<button style="background-color: #498bf9; border-radius: 50%; color: white; padding: 10px 20px;">Join Pelorus Health</button>
