--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<h1 style="color: black; font: Inter">Let us be your <span style="color: #498bf9;"> true north.</span> </h1>
 								<p>Pelorus is a mobile appication currently in development. Connect with us to learn about our journey as we progress! </p>
 							</header>
-							<button style="background-color: #498bf9; border-radius: 50%; color: white; padding: 10px 20px;">Join Pelorus Health</button>
+						<button style="background-color: #498bf9; border: none; border-radius: 50%; color: white; padding: 10px 20px; font-family: Inter;">Join Pelorus Health</button>
 
 							<section class="tiles">
 								<article class="style1">
