--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1 style="color: black; font-family: Inter;">Let us be your <span style="color: #498bf9;"> true north.</span> </h1>
-								<p style="color: black; font-family: Inter;">Navigate your type 1 diabetes journey with ease. </p>
+								<h1 style="color: black; font-family: 'Inter', sans-serif;">Let us be your <span style="color: #498bf9;"> true north.</span> </h1>
+								<p style="color: black; font-family: 'Inter', sans-serif;">Navigate your type 1 diabetes journey with ease. </p>
 							</header>
 						<button style="background-color: #498bf9; border: none; border-radius: 50%; color: white; padding: 10px 20px; font-family: Inter;">Join Pelorus Health</button>
 
