--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo-2.svg" alt="" /></span><span class="title"></span>
+									<span class="symbol"><img src="images/circle logo 1.svg" alt="" /></span><span class="title"></span>
 								</a>
 
 							<!-- Nav -->
