--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<h1 style="color: black; font-family: 'Inter', sans-serif;">Let us be your <span style="color: #498bf9;"> true north.</span> </h1>
 								<p style="color: black; font-family: 'Inter', sans-serif;">Navigate your type 1 diabetes journey with ease. </p>
 							</header>
-						<button style="background-color: #498bf9; border: none; border-radius: 50%; color: white; padding: 10px 20px; font-family: Inter;">Join Pelorus Health</button>
+						<button style="background-color: #498bf9; border: none; border-radius: 50%; color: white; padding: 10px 20px; font-family: 'Inter', sans-serif;">Join Pelorus Health</button>
 
 							<section class="tiles">
 								<article class="style1">
