--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/circle logo 1.svg" alt="" /></span><span class="title"></span>
-								</a>
+								<img src="images/circle logo 1.svg" alt="Pelorus Health logo" style="width: 400px; height: 400px;">
 
+							
 							<!-- Nav -->
 								<nav>
 									<ul>
