--- a/index.html
+++ b/index.html
@@ -51,8 +51,20 @@
 								<h1 style="color: black; font-family: 'Inter', sans-serif;">Let us be your <span style="color: #498bf9;"> true north</span> </h1>
 								<p style="color: black; font-family: 'Inter', sans-serif;">Navigate your type 1 diabetes journey with ease. </p>
 							</header>
-						<button class="button"> Normal button</button> 
-						<button class="button pill-shape"> Rounded corner button</button>
+						<button class="button">Pill Button</button>
+							.button {
+								  background-color: #ddd;
+								  border: none;
+								  color: black;
+								  padding: 10px 20px;
+								  text-align: center;
+								  text-decoration: none;
+								  display: inline-block;
+								  margin: 4px 2px;
+								  cursor: pointer;
+								  border-radius: 16px;
+								}
+						
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
