--- a/index.html
+++ b/index.html
@@ -51,19 +51,8 @@
 								<h1 style="color: black; font-family: 'Inter', sans-serif;">Let us be your <span style="color: #498bf9;"> true north</span> </h1>
 								<p style="color: black; font-family: 'Inter', sans-serif;">Navigate your type 1 diabetes journey with ease. </p>
 							</header>
-						<button class="button">Pill Button</button>
-							.button {
-								  background-color: #ddd;
-								  border: none;
-								  color: black;
-								  padding: 10px 20px;
-								  text-align: center;
-								  text-decoration: none;
-								  display: inline-block;
-								  margin: 4px 2px;
-								  cursor: pointer;
-								  border-radius: 16px;
-								}
+						<button style="background-color: #498bf9; border: none; border-radius: 20px; color: white; padding: 10px 20px; font-family: 'Inter', sans-serif;">Join Pelorus Health</button>
+
 						
 							<section class="tiles">
 								<article class="style1">
