--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body {
 										<li><a href="#menu">Menu</a></li>
 									</ul>
 								</nav>
-				<img class="logo" src="path/to/your/logo.png" alt="Logo">
+				<img class="logo" src="images/phone homepage.svg" alt="Logo">
 						</div>
 					</header>
 
