--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                         </p>
                                     </footer>
                                 </div>
-                                <img class="logo" src="images/phone homepage.svg" alt="Logo">
+                                <img class="logo" src="images/phone homepage.png" alt="Logo">
                             </div>
                         </div>
                     </div>
