--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                         </p>
                                     </footer>
                                 </div>
-                                <img class="logo" src="images/phone homepage.png" alt="Logo" style="width: 800px; height: 700px;">
+                                <img class="logo" src="images/phone1.png" alt="Logo" style="width: 750px; height: 700px;">
                             </div>
                         </div>
                     </div>
