--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                             <div class="header-content">
                                 <div class="header-left">
                                     <header>
+                                    <img src="images/circle logo 1.svg" alt="Pelorus Health logo" style="width: 200px; height: 180px;">
+
                                         <h1 style="color: black; font-family: 'Inter', sans-serif;">Let us be your <span style="color: #498bf9;"> true north</span> </h1>
                                         <p style="color: black; font-family: 'Inter', sans-serif;">Navigate your type 1 diabetes journey with ease. </p>
                                     </header>
@@ -66,7 +68,7 @@
                                         </p>
                                     </footer>
                                 </div>
-                                <img class="logo" src="images/phone1.png" alt="Logo" style="width: 450px; height: 600px;">
+                                <img class="logo" src="images/phone1.png" alt="Logo" style="width: 550px; height: 600px;">
                             </div>
                         </div>
                     </div>
