--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@ body {
                                         <h1 style="color: black; font-family: 'Inter', sans-serif;">Let us be your <span style="color: #498bf9;"> true north</span> </h1>
                                         <p style="color: black; font-family: 'Inter', sans-serif;">Navigate your type 1 diabetes journey with ease. </p>
                                     </header>
-                                <a href="#0" class="button">Join Pelorus Health</a>
-
+                                a.button(href="https://instagram.com/pelorushealth/") Join Pelorus Health
                                 </div>
                                 <img class="logo" src="images/phone1.png" alt="Logo" style="width: 550px; height: 600px;">
                             </div>
