--- a/index.html
+++ b/index.html
@@ -22,79 +22,31 @@
                 display: flex;
                 flex-direction: column;
             }
-            $bgColor: #498bf9;
-$textHoverColor: white;
-$debug: false;
-
-body {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
+            
+/* button*/
+		.pill-btn{
+  display: inline-block;
+  box-sizing: border-box;
+  height: 70px;
+  line-height: 64px;
+  background: #498bf9;
+  padding: 0px 30px;
+  border-radius: 999em;
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+      vertical-align: bottom;
+    white-space: nowrap;
+  border: 3px solid #5C81F2;
+font-family: "Inter",sans-serif;  
+  letter-spacing: 1.5px;
+  transition: .15s background-color,.15s border-color,.15s color,.15s fill;
+  font-weight: 600;
 }
-
-.button {
-	display: inline-block;
-	position: relative;
-	z-index: 1;
-	overflow: if($debug, unset, hidden);
-	
-	text-decoration: none;
-	
-	font-family: "Inter",sans-serif;
-	font-weight: 600;
-	font-size: 2em;
-	
-	padding: 0.75em 1em;
-	
-	color: #498bf9;
-	
-	border: 0.15em solid #498bf9;
-	border-radius: calc(0.75em + 0.5em + 0.15em);
-	
-	transition: 4s;
-	
-	&:before,
-	&:after {
-		content: '';
-		position: absolute;
-		top: -1.5em;
-		
-		z-index: -1;
-		
-		width: 200%;
-		aspect-ratio: 1;
-		
-		border: if($debug, inherit, none);
-		border-radius: 40%;
-		
-		background-color: rgba($bgColor, 0.25);
-		
-		transition: 4s;
-	}
-	
-	&:before {
-		left: -80%;
-		transform: translate3d(0, 5em, 0) rotate(-340deg);
-	}
-	
-	&:after {
-		right: -80%;
-		transform: translate3d(0, 5em, 0) rotate(390deg);
-	}
-	
-	&:hover,
-	&:focus {
-		color: $textHoverColor;
-		
-		&:before,
-		&:after {
-			transform: none;
-			background-color: rgba($bgColor, 0.75);
-		}
-	}
+.pill-btn:hover{
+  background: #649cfa;
+  border: 3px solid #7493F2;
 }
-
 
         </style>
     </head>
@@ -135,8 +87,7 @@ body {
                                         <h1 style="color: black; font-family: 'Inter', sans-serif;">Let us be your <span style="color: #498bf9;"> true north</span> </h1>
                                         <p style="color: black; font-family: 'Inter', sans-serif;">Navigate your type 1 diabetes journey with ease. </p>
                                     </header>
-					<button class="button">Join Pelorus Health</button>
-                                </div>
+				<a href="https://www.instagram.com/pelorushealth/" class="pill-btn">Join Pelorus Health</a>                                </div>
                                 <img class="logo" src="images/phone1.png" alt="Logo" style="width: 550px; height: 600px;">
                             </div>
                         </div>
