--- a/index.html
+++ b/index.html
@@ -87,10 +87,12 @@ font-family: "Inter",sans-serif;
                                         <h1 style="color: black; font-family: 'Inter', sans-serif;">Let us be your <span style="color: #498bf9;"> true north</span> </h1>
                                         <p style="color: black; font-family: 'Inter', sans-serif;">Navigate your type 1 diabetes journey with ease. </p>
                                     </header>
+				<a href="https://www.instagram.com/pelorushealth/" class="pill-btn">Join Pelorus Health</a>                                </div>
                                 <img class="logo" src="images/phone1.png" alt="Logo" style="width: 550px; height: 600px;">
                             </div>
                         </div>
                     </div>
+
                 <!-- Footer -->
                     <footer id="footer">
                         <div class="inner">
