--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@ font-family: "Inter",sans-serif;
                                         <p style="color: black; font-family: 'Inter', sans-serif;">Navigate your type 1 diabetes journey with ease. </p>
                                     </header>
                                 <img class="logo" src="images/phone1.png" alt="Logo" style="width: 550px; height: 600px;">
+				<a href="https://www.instagram.com/pelorushealth/" class="pill-btn">Join Pelorus Health</a>                                </div>
+
                             </div>
                         </div>
                     </div>
