--- a/index.html
+++ b/index.html
@@ -12,18 +12,7 @@
         <link rel="stylesheet" href="assets/css/main.css" />
         <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
         <style>
-            .header-content {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-            }
-            .header-left {
-                display: flex;
-                flex-direction: column;
-            }
-            
-/* button*/
+          /* button*/
 		.pill-btn{
   display: inline-block;
   box-sizing: border-box;
@@ -47,6 +36,20 @@ font-family: "Inter",sans-serif;
   background: #649cfa;
   border: 3px solid #7493F2;
 }
+	  
+	  
+	  .header-content {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+            }
+            .header-left {
+                display: flex;
+                flex-direction: column;
+            }
+            
+
 
         </style>
     </head>
@@ -87,12 +90,12 @@ font-family: "Inter",sans-serif;
                                         <h1 style="color: black; font-family: 'Inter', sans-serif;">Let us be your <span style="color: #498bf9;"> true north</span> </h1>
                                         <p style="color: black; font-family: 'Inter', sans-serif;">Navigate your type 1 diabetes journey with ease. </p>
                                     </header>
-				<a href="https://www.instagram.com/pelorushealth/" class="pill-btn">Join Pelorus Health</a>                                </div>
+				                                </div>
                                 <img class="logo" src="images/phone1.png" alt="Logo" style="width: 550px; height: 600px;">
                             </div>
                         </div>
                     </div>
-
+<a href="https://www.instagram.com/pelorushealth/" class="pill-btn">Join Pelorus Health</a>
                 <!-- Footer -->
                     <footer id="footer">
                         <div class="inner">
