--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ font-family: "Inter",sans-serif;
 .pill-btn:hover{
   background: #649cfa;
   border: 3px solid #7493F2;
+  color: #fff;
 }
 	  
 	  
