--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@ font-family: "Inter",sans-serif;
                                     <img src="images/circle logo 1.svg" alt="Pelorus Health logo" style="width: 200px; height: 180px;">
 
                                         <h1 style="color: black; font-family: 'Inter', sans-serif;">Let us be your <span style="color: #498bf9;"> true north</span> </h1>
-                                        <p style="color: black; font-family: 'Inter', sans-serif;">Navigate your type 1 diabetes journey with ease. </p>
+					<p style="color: black; font-family: 'Inter', sans-serif; margin-top: 0.5em;">Navigate your type 1 diabetes journey with ease.</p>
+
                                     </header>
 			
 				                                </div>
