--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ font-family: "Inter",sans-serif;
                 flex-direction: column;
             }
             
+	    .header-left h1 {
+        margin-bottom: 10px;
+    }
 
 
         </style>
